--- a/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
@@ -43,6 +43,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AfxServices.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Angelfish.AfxSystem.X.Common\Angelfish.AfxSystem.X.Common.csproj">
+      <Project>{cfd9ebe8-28b4-44da-aa27-7882ed1a04fb}</Project>
+      <Name>Angelfish.AfxSystem.X.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
