Add probe path for plug-in components
Added a probing path to the App.config file for
the Visual Designer application, so that it can
load the package of test components.

--- a/Source/Angelfish.AfxStudio/Angelfish.AfxStudio.csproj
+++ b/Source/Angelfish.AfxStudio/Angelfish.AfxStudio.csproj
@@ -118,7 +118,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Media\Icon.App.ico" />
