--- a/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
@@ -48,6 +48,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Plugins\Metadata\AfxComponentCatalogView.xaml.cs">
+      <DependentUpon>AfxComponentCatalogView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Plugins\Metadata\AfxComponentCatalogViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -72,10 +76,23 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Angelfish.AfxSystem.A.Common\Angelfish.AfxSystem.A.Common.csproj">
+      <Project>{60481d5e-52a0-4556-9d05-6b6269bacacb}</Project>
+      <Name>Angelfish.AfxSystem.A.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Angelfish.AfxSystem.X.Common\Angelfish.AfxSystem.X.Common.csproj">
       <Project>{cfd9ebe8-28b4-44da-aa27-7882ed1a04fb}</Project>
       <Name>Angelfish.AfxSystem.X.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Media\icon.component.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Plugins\Metadata\AfxComponentCatalogView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
