--- a/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Plugins\AfxComponent.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentEndpoint.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentPackage.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentCatalog.cs" />
