Add AfxConnector class
Added a class that represents a logical connection
between two different components in a workflow.

--- a/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Plugins\AfxComponent.cs" />
+    <Compile Include="Plugins\AfxConnector.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentEndpoint.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentPackage.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentCatalog.cs" />
