Add AfxComponentEndpointViewModel class
Added a class to provide the view model for the
incoming and outgoing endpoints that are displayed
as part of the visual representation of components
on the workflow design surface.

--- a/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AfxVisualTree.cs" />
+    <Compile Include="Plugins\AfxComponentEndpointViewModel.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentCatalogView.xaml.cs">
       <DependentUpon>AfxComponentCatalogView.xaml</DependentUpon>
     </Compile>
