Add AfxComponentOperatorViewModel class
Added a class to provide the view model for the
component operator view, which provides the visual
representation of individual plug-in components on
the workflow design surface.

--- a/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
@@ -54,6 +54,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Plugins\AfxComponentEndpointViewModel.cs" />
+    <Compile Include="Plugins\AfxComponentOperatorViewModel.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentCatalogView.xaml.cs">
       <DependentUpon>AfxComponentCatalogView.xaml</DependentUpon>
     </Compile>
