Add AfxComponentOperatorView control
Added a user control that provides the view for the
instances of plug-in components that are displayed on
the workflow design surface.

--- a/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common.Ui/Angelfish.AfxSystem.A.Common.Ui.csproj
@@ -54,6 +54,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Plugins\AfxComponentEndpointViewModel.cs" />
+    <Compile Include="Plugins\AfxComponentOperatorView.xaml.cs">
+      <DependentUpon>AfxComponentOperatorView.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Plugins\AfxComponentOperatorViewModel.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentCatalogView.xaml.cs">
       <DependentUpon>AfxComponentCatalogView.xaml</DependentUpon>
@@ -100,6 +104,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Plugins\AfxComponentEndpointView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Plugins\AfxComponentOperatorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
