--- a/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Plugins\Metadata\AfxComponentTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AfxServices.cs" />
+    <Compile Include="Workflows\AfxWorkflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Angelfish.AfxSystem.X.Common\Angelfish.AfxSystem.X.Common.csproj">
