--- a/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
+++ b/Source/Angelfish.AfxSystem.A.Common/Angelfish.AfxSystem.A.Common.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Plugins\Metadata\AfxComponentResolver.cs" />
     <Compile Include="Plugins\Metadata\AfxComponentTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\AfxSerializer.cs" />
     <Compile Include="Services\AfxServices.cs" />
     <Compile Include="Workflows\AfxWorkflow.cs" />
   </ItemGroup>
