Add support for saving/loading workflows
Added support for saving and loading workflows
from JSON formatted files, using the serializer
component developed for the tutorial.

--- a/Source/Angelfish.AfxStudio/Angelfish.AfxStudio.csproj
+++ b/Source/Angelfish.AfxStudio/Angelfish.AfxStudio.csproj
@@ -93,6 +93,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppWindowDocument.cs" />
+    <Compile Include="AppWindowDocument_Workflow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
